Able to delete photo

--- a/DatingApplication/appsettings.json
+++ b/DatingApplication/appsettings.json
@@ -12,5 +12,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Server=(localdb)\\MSSQLLocalDB; Database=DatingApplication;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "CloudinarySettings": {
+    "CloudName": "abvideo",
+    "ApiKey": "424791299756342",
+    "ApiSecret": "LjAZzmC4rdw0lDEUxv8beo4nzA4"
   }
 }
